--- a/index.html
+++ b/index.html
@@ -27,10 +27,8 @@
          <input type="search" placeholder ="Paris, Belleville" name= "recherche" id="recherche"/>
         </span>
         <div class="suite">
-	        <p class="bold">Réservez le menu qui</p>
-	        <p class="bold2">vous convient</p>
-	        <p class="paragraphe">Découvrez des restaurants d'exception,</p>
-	        <p class="paragraphe1">séléctionnés par nos soins.</p>
+	        <p class="bold">Réservez le menu qui vous convient</p>
+	        <p class="paragraphe">Découvrez des restaurants d'exception,séléctionnés par nos soins.</p>
         <label for="recherche">localisez-moi</label>
         <button type="submit">Explorer nos restaurants</button>
       </div>
