--- a/menu4.html
+++ b/menu4.html
@@ -141,7 +141,7 @@
 
      <section class="carte">
       
-      <h3>Desserts<span class="bordure"></span></h3>
+      <h3>DESSERTS<span class="bordure"></span></h3>
 
       <article class="animation">
               <div class="plats">
